--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>divpuzzle</title>
 </head>
 <body>
-  <div class="flex">
+  <div class="cleafix">
     <div class="red--box"></div>
   </div>
     <div class="green--box"></div>
