--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>divpuzzle</title>
 </head>
 <body>
-  <div class="cleafix">
     <div class="red--box"></div>
-  </div>
+  <div class="clearfix">
     <div class="green--box"></div>
     <div class="blue--box"></div>
   </div>
